test/types/range/lydia/badRange-real-lower.good
badRange-real-lower.chpl:1: In function 'main':
badRange-real-lower.chpl:2: error: param for-loops defined using bounds of type 'real(64)..int(64)' are not currently supported
