test/types/range/lydia/badRange-real-lower.chpl
proc main() {
  for param i in .0..5 {
    writeln(i);
  }
}
